--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       Time left: <span id="timer">0</span>
     </p>
 
-  <script src="js/main.js">
+  <script src="JS/main.js">
   </script>
 
 </body>
