--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 
 <body>
+  <div class="container">
     <p id="target">Click to start</p>
     <p class="info">
       Letter count: <span id="score">0</span>
       Miss count: <span id="miss">0</span>
       Time left: <span id="timer">0</span>
     </p>
+  </div>
 
   <script src="JS/main.js">
   </script>
